--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
+@import "./Style/ingredients.css";
+@import "./Style/nav.css";
+@import "./Style/Categories.css";
+@import "./Style/AddRecipe.css";
+@import "./Style/recipeItem.css";
+@import "./Style/RecipePage.css";
+@import "./Style/user.css";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #4831d4;
+  /* C9FB5F */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Welcome {
+  color: #c9fb5f;
+  font-size: 50px;
+  font-family: sans-serif;
 }
