--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -17,8 +17,8 @@
   box-sizing: border-box;
 }
 .form-style {
-  height: 350px;
-  width: 400px;
+  height: 380px;
+  width: 450px;
   background-color: rgba(255, 255, 255, 0.13);
   position: absolute;
   transform: translate(-50%, -50%);
@@ -66,7 +66,7 @@
 }
 .button-sign {
   margin-top: 50px;
-  width: 20%;
+  width: 100%;
   background-color: #c9fb5f;
   color: #080710;
   padding: 15px 0;
@@ -83,90 +83,155 @@
 /* SETTINGS STYLE */
 
 .imageUserNameEdit {
-  justify-content: "space-between";
-  align-items: "flex-start";
-  flex-direction: "row";
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row;
 }
 .imageUserName {
-  justify-content: "flex-Start";
-  align-items: "center";
-  flex-direction: "column";
-  position: "relative";
-  margin-left: 2;
+  justify-content: flex-Start;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  margin-left: 2px;
 }
 .profile {
-  position: "absolute";
-  align-self: "center";
-  margin-top: 75;
-  margin-left: 28;
-  font-size: 30;
-  align-self: "flex-start";
-  color: bisque;
+  margin-top: 50px;
+  /* margin-left: 28px; */
+  font-size: 30px;
+  align-self: flex-start;
+  color: #c9fb5f;
 }
-.profileImage {
-  width: 200;
-  height: 200;
-  border-radius: 500;
-  margin-right: 105;
-  margin-left: 112;
-  margin-top: 60;
-  border-width: 2;
-}
+
 .spotsNum {
-  font-size: 30;
-  margin-top: 30;
-  margin-left: 12;
-  font-weight: "bold";
+  font-size: 30px;
+  margin-top: 30px;
+  margin-left: 12px;
+  font-weight: bold;
 }
 .spotsTitle {
-  font-size: 30;
-  margin-top: -10;
-  margin-left: 12;
+  font-size: 30px;
+  margin-top: -10px;
+  margin-left: 12px;
   /* fontWeight: "bold"; */
 }
 .edit {
-  border-radius: 10;
-  position: "absolute";
-  margin-top: 360;
-  margin-left: "16%";
-  background-color: "#e7e7e7";
-  border-radius: "50%";
-  justify-content: "center";
-  padding-left: 80;
-  padding-right: 80;
+  border-radius: 10px;
+  position: absolute;
+  margin-top: 360px;
+  margin-left: 16%;
+  background-color: #e7e7e7;
+  border-radius: 50%;
+  justify-content: center;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 .bio {
-  justify-content: "center";
-  align-items: "center";
-  text-align: "justify";
-  margin: 12;
-  padding: 10;
-  padding-top: 2;
-  padding-bottom: 15;
-  font-size: 9;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
+  margin: 12px;
+  padding: 10px;
+  padding-top: 2px;
+  padding-bottom: 15px;
+  font-size: 25px;
+  color: #c9fb5f;
 }
 .bioText {
-  font-size: 17;
-  padding-bottom: 20;
+  font-size: 50px;
+  padding-bottom: 20px;
 }
-.tripList {
-  grid: 2;
+/* .tripList {
+  grid: 2px;
   grid-template: "c1 c2";
-}
+} */
 .imageCard {
   /* alignSelf: "center"; */
-  width: 80;
-  height: 80;
-  border-radius: 40;
-  margin: 10;
-  z-index: -1;
-  opacity: 0.8;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  margin: 10px;
+  z-index: -1px;
+  opacity: 0.8px;
 }
 .spotsList {
-  background-color: "#fffffc";
-  height: "100%";
-  width: "100%";
+  background-color: #fffffc;
+  height: 100%;
+  width: 100%;
 }
 .spotsListContainer {
-  background-color: "#fffffc";
+  background-color: #fffffc;
+}
+
+.reviewImage {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+}
+
+.star {
+  width: 25px;
+  height: 25px;
+  /* margin: 10px; */
+  /* margin-left: -10px; */
+  border-radius: 50%;
+  object-fit: cover;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px; */
+}
+
+.center-Review {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+}
+
+.center-settings {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.review-name {
+  margin-top: 8px;
+}
+
+.profileImage {
+  width: 250px;
+  height: 250px;
+  margin: 10px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+}
+
+.form-styleh {
+  height: 490px;
+  width: 450px;
+  background-color: rgba(255, 255, 255, 0.13);
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 50px 35px;
+}
+.form-styleh * {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
+}
+.form-styleh h3 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
 }
