--- a/src/Style/AddRecipe.css
+++ b/src/Style/AddRecipe.css
@@ -1,8 +1,10 @@
 .center{
   display: flex;
   align-items: center;
-  justify-content: center;
   text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
 }
 .createnewrecipetitle{
   color: #000000;
@@ -55,15 +57,14 @@ box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15p
 {
   border-radius: 20px;
   background-color:#ffffff;
-
   margin: 30px;
-  padding-left:100px;
-  padding-right:100px;
+  padding:50px;
+  padding-top: 0;
   display: flex;
   flex-direction : column;
   width: 50%;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;}
+
 
 .feedback-input {
 color:rgb(0, 0, 0);
@@ -123,6 +124,7 @@ width: 50px;
 padding: 10px
 }
 .Scrollcategoryimage{
+
   width: 90px;
   height: 90px;
   margin: 10px;
