--- a/src/Style/RecipePage.css
+++ b/src/Style/RecipePage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Ubuntu:wght@300;700&display=swap');
+
 .singlecontainer
 {
     position: relative;
@@ -72,5 +74,101 @@
 }
 .singleingredientdiv{
     display: flex;
+
+}
+
+.spotlabel{
+    font-family: 'Ubuntu', sans-serif;
+  font-size: 16px;
+  color: rgba(117, 117, 117, 0.948);
+  margin: 0;
+  align-self: flex-start;
+  letter-spacing: 1.5px;
+}
+.spotlink{
+    display: inline-block;
+    width:100%;
+    font-family: 'Source Sans Pro', sans-serif;
+  font-size: 20px;
+    color: #4831d4;
+  text-decoration: underline;
+  margin: 0;
+  margin: 10px;
+  text-decoration-thickness: 0.05em;
+  text-underline-offset: 0.1em;
+  align-self: flex-start;
+}
+
+.spottext{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    color: black;
+    margin: 0;
+    align-self: flex-start;
+    font-weight: 200;
+
+}
+.spottextbig{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    color: black;
+    margin: 0;
+    align-self: flex-start;
+    font-weight: 200;
+    margin: 10px;
+
+}
+
+.mainspottitle{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 40px;
+    color: #4831d4;
+  padding-right: 10px;
+}
+
+.spotinfodiv{
+    height: fit-content;
+    border-radius: 35px;
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
+}
+
+.spotcontainer{
+   display: flex;
+    width: 100%;
+    padding:15px;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    border-bottom-color: rgba(178, 174, 174, 0.658);
+    border-bottom-width: 0.4px;
+    border-bottom-style: solid;
+}
+
+.line{
+    border-bottom: gray;
+    border-bottom-style: solid;
+    border-bottom-width: 0.1px;
+}
+
+.spotimagediv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+}
+
+.headingdetails{
+    display: flex;
+    flex-direction: row;
+}
+
+.spotinfobig{
+    padding: 5%;
 
 }
