--- a/src/Style/recipeItem.css
+++ b/src/Style/recipeItem.css
@@ -1,22 +1,19 @@
 #pagetop h5  { text-decoration: none; }
+@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Libre+Barcode+39+Text&family=Nuosu+SIL&family=Playball&family=Press+Start+2P&family=Sanchez&family=Ubuntu:wght@300&display=swap');
+
 .recipecontainer{
-    display: block;
     overflow: hidden;
     cursor: pointer;
     background:#EEE;
     border-radius: 15px;
     position: relative;
-    height: 300px;
-    width: 200px;
+    width: 275px;
+    height: 455px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     overflow: hidden;
     z-index: 30;
     transition: transform 0.3s ease-in-out, border-radius 0.3s ease-in-out;
-    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-      0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
-      0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-      0 100px 80px rgba(0, 0, 0, 0.07);
       margin: 20px;
       text-decoration: none;
 }
@@ -37,9 +34,9 @@
     transform: scale(1.1);
 }
 .recipename{
+    font-family: 'Ubuntu', sans-serif;
     display: flex;
-    align-content: space-around;
-    font-size: 25px;
+    font-size: 30px;
     color: white;
     position: absolute;
     flex-wrap: nowrap;
@@ -51,11 +48,11 @@
       rgba(0, 0, 0, 0.6) 100%
     );
     text-shadow: rgb(0.4, 0.4, 2.4);
-    font-family: Georgia, 'Times New Roman', Times, serif;
     bottom:0;
     width: 100%;
     text-align: left;
     padding-left: 10px;
+    padding: 30px;
 }
 
 a {
