--- a/src/Style/offers.css
+++ b/src/Style/offers.css
@@ -46,13 +46,13 @@
   background-color:#ffffff;
   margin: 30px;
   padding:50px;
-  width: 80%;
+  width: 65%;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   }
 
   .offerimagetext{
     align-self: center;
-display: flex;
+    display: flex;
     margin: 10px;
     border-radius: 30px;
     border-style: solid;
@@ -87,4 +87,20 @@ display: flex;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     text-align: start;
+  }
+
+  .generateqrdiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+  }
+
+  .qrdivone{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: center;
+
   }
