Edited the qr code design

--- a/src/Style/offers.css
+++ b/src/Style/offers.css
@@ -99,7 +99,7 @@
 
   .qrdivone{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     align-content: center;
 
