--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -70,7 +70,6 @@
 }
 .input-style {
   font-family: "Source Sans Pro", sans-serif;
-
   display: block;
   height: 50px;
   width: 380px;
@@ -337,7 +336,7 @@
   height: 200px;
   margin: 10px;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit: contain;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
 }
 .modalprofileImage {
@@ -345,7 +344,7 @@
   height: 200px;
   border-radius: 50%;
   margin-bottom: 25px;
-  object-fit: cover;
+  object-fit: contain;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
 }
 
