--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -640,3 +640,30 @@
   color: white;
   margin-left: 10px;
 }
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+.one {
+  grid-column: 1 / 1;
+  grid-row: 1;
+}
+.two {
+  grid-column: 2 / 2;
+  grid-row: 1;
+}
+.three {
+  grid-column: 3 / 3;
+  grid-row: 1;
+}
+.four {
+  grid-column: 1 / 1;
+  grid-row: 2;
+}
+.five {
+  grid-column: 2 / 4;
+  grid-row: 2;
+}
