--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 @import "./Style/RecipePage.css";
 @import "./Style/user.css";
 @import "./Style/offers.css";
+@import "./Style/Ads.css";
 
 body {
   background-color: #4831d4;
