ADDED admin dashboard, change password, and forget password

--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -665,3 +665,11 @@
   grid-column: 2 / 4;
   grid-row: 2;
 }
+.six {
+  grid-column: 3 / 3;
+  grid-row: 2;
+}
+.seven {
+  grid-column: 2 / 2;
+  grid-row: 2;
+}
