--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
 @import "./Style/user.css";
 @import "./Style/offers.css";
 @import "./Style/Ads.css";
+@import "./Style/application.css";
 
 body {
   background-color: #4831d4;
   /* C9FB5F */
-  background: rgba(0, 0, 0, .65) url("./background1.png");
+  background: rgba(0, 0, 0, 0.65) url("./background1.png");
   background-size: cover;
   background-blend-mode: darken;
-
 }
 .Welcome {
   color: white;
@@ -23,29 +23,29 @@ body {
   text-justify: inter-word;
   align-self: center;
   margin-right: 60px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
-.RegisterModal{
+.RegisterModal {
   align-self: center;
 }
-.welcomeformrow{ 
+.welcomeformrow {
   height: 100%;
   width: 100%;
   margin-top: 130px;
-  display:inline-flex;
+  display: inline-flex;
   justify-content: center;
   align-content: center;
   flex-direction: row;
 }
-.appdiv{
-height: 100%;
-width: 100%;
+.appdiv {
+  height: 100%;
+  width: 100%;
 }
 
-.whitebackground{
+.whitebackground {
   background-color: white;
-  padding:  30px;
-  top:0;
+  padding: 30px;
+  top: 0;
   right: 0;
   left: 0;
   bottom: 0;
@@ -56,9 +56,9 @@ width: 100%;
   flex-direction: column;
   width: 100%;
 }
-.dashback{
-  padding:  30px;
-  top:0;
+.dashback {
+  padding: 30px;
+  top: 0;
   right: 0;
   left: 0;
   bottom: 0;
