--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -394,6 +394,18 @@
   justify-content: center;
   margin: 20px;
 }
+.dashcardDough {
+  display: flex;
+  flex-direction: row;
+  width: 25%;
+  height: 30%;
+  border-radius: 10%;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
 .dash {
   font-size: 40px;
   padding-bottom: 30px;
