--- a/src/Style/offers.css
+++ b/src/Style/offers.css
@@ -57,8 +57,8 @@
     border-radius: 30px;
     border-style: solid;
     border-width: 1px;
-    border-color: #4831d4;
-    color: #4831d4;
+    border-color: #9279f7;
+    color: #9279f7;
     object-fit:cover;
     justify-content: center;
     text-align: center;
