--- a/src/Style/RecipePage.css
+++ b/src/Style/RecipePage.css
@@ -90,7 +90,7 @@
     width:100%;
     font-family: 'Source Sans Pro', sans-serif;
   font-size: 20px;
-    color: #4831d4;
+    color: #9279f7;
   text-decoration: underline;
   margin: 0;
   margin: 10px;
@@ -122,7 +122,7 @@
 .mainspottitle{
     font-family: 'Ubuntu', sans-serif;
     font-size: 40px;
-    color: #4831d4;
+    color: #9279f7;
   padding-right: 10px;
 }
 
