--- a/src/Style/AddRecipe.css
+++ b/src/Style/AddRecipe.css
@@ -65,6 +65,24 @@ box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15p
   width: 50%;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
+.containerLive
+{
+  border-radius: 20px;
+  background-color:#ffffff;
+  margin: 30px;
+  padding-top: 0;
+  display: flex;
+  flex-direction : column;
+  width: 50%;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  margin-bottom: 0;
+  height: fit-content;
+  display:flex;
+  flex-direction: row;
+  padding: 0;
+  border: solid #e52b51;
+  border-width: 2px;
+}
 
 
 .feedback-input {
@@ -189,3 +207,4 @@ scrollbar-width: none;  /* Firefox */
   display: flex;
   flex-direction: column;
 }
+
