--- a/src/Style/Ads.css
+++ b/src/Style/Ads.css
@@ -49,8 +49,8 @@
 .adbutton{
     border-radius: 20px;
     background-color: white;
-    border-color: #9279f7;
-    color: #9279f7;
+    border-color: #e52b51;
+    color: #e52b51;
     font-weight: bold;
     margin-left: 10px;
     font-family: "Ubuntu", sans-serif;
@@ -77,8 +77,8 @@
 .logoutadbutton{
     border-radius: 20px;
     background-color: white;
-    border-color: #9279f7;
-    color: #9279f7;
+    border-color: #e52b51;
+    color: #e52b51;
     font-weight: bold;
     margin-left: 10px;
     font-family: "Ubuntu", sans-serif;
@@ -92,7 +92,7 @@
     width:70%;
     padding: 10px;
     border-radius: 10px;
-    border-color:  #9279f7;
+    border-color:  #e52b51;
     border-width: 1px;
     margin: 10px;
     margin-right: 0;
